Auth Service, Auth Repository, Swagger, Jwt Authentication

--- a/BookStore.Mvc/Views/Book/Index.cshtml
+++ b/BookStore.Mvc/Views/Book/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BookStore.Application.ViewModel.GetBookViewModel>
+﻿@model IEnumerable<BookStore.Application.ViewModel.GetBooksViewModel>
 
 <div class="container body-content">
     <div class="row book-content">
