Route Config , SRP

--- a/BookStore.Mvc/Views/Book/Index.cshtml
+++ b/BookStore.Mvc/Views/Book/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BookStore.Application.ViewModel.GetBooksViewModel>
+﻿@model IEnumerable<BookStore.Application.Response.BookViewModel.BooksViewModel>
 
 <div class="container body-content">
     <div class="row book-content">
